--- a/index.html
+++ b/index.html
@@ -48,23 +48,21 @@
 
   <div id="contact-overlay" class="overlay">
     <button class="close-btn" id="close-contact">×</button>
-    <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
+    <form id="contact-form">
       <h2 id="contact-title">Kapcsolatfelvétel</h2>
       <h3 id="contact-email">hello@roadtoload.hu</h3>
-      <input type="hidden" name="access_key" value="fefe9987-1d25-45f4-8f72-8d82ef6f152d">
-      <input type="text" id="name" placeholder="Név" required>
-      <input type="email" id="email" placeholder="E-mail cím" required>
-      <textarea id="message" placeholder="Üzenet..." required></textarea>
+      <input type="text" name="name" id="name" placeholder="Név" required>
+      <input type="email" name="email" id="email" placeholder="E-mail cím" required>
+      <textarea name="message" id="message" placeholder="Üzenet..." required></textarea>
       <button type="submit" class="submit-btn" id="send-btn">Küldés</button>
     </form>
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
+    // Térkép
     const map = L.map('map').setView([47.4979, 19.0402], 13);
-    L.tileLayer('https://basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-      maxZoom: 19
-    }).addTo(map);
+    L.tileLayer('https://basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { maxZoom: 19 }).addTo(map);
 
     const bars = [
       { name: "Mazel Tov", street: "Akácfa utca 47.", coords: [47.497, 19.060] },
@@ -76,11 +74,8 @@
     ];
 
     const barListDiv = document.getElementById('bar-list');
-
     function generateTour() {
-      map.eachLayer(layer => {
-        if (layer instanceof L.Marker || layer instanceof L.Polyline) map.removeLayer(layer);
-      });
+      map.eachLayer(layer => { if (layer instanceof L.Marker || layer instanceof L.Polyline) map.removeLayer(layer); });
       const shuffled = bars.sort(() => 0.5 - Math.random()).slice(0, 4);
       let previous = null;
       let listHTML = `<h3>${currentLang === 'hu' ? 'Mai túrád:' : 'Your tour:'}</h3>`;
@@ -93,58 +88,36 @@
       barListDiv.innerHTML = listHTML;
       barListDiv.style.display = "block";
     }
-
     document.getElementById('generate').addEventListener('click', generateTour);
     document.getElementById('mobile-generate').addEventListener('click', generateTour);
 
+    // Menü és overlay
+    const hamburger = document.getElementById('hamburger');
+    const navMenu = document.getElementById('nav-menu');
     const aboutOverlay = document.getElementById('about-overlay');
     const contactOverlay = document.getElementById('contact-overlay');
 
+    hamburger.addEventListener('click', () => navMenu.classList.toggle('show'));
     document.getElementById('about-link').addEventListener('click', () => aboutOverlay.style.display = 'flex');
     document.getElementById('contact-link').addEventListener('click', () => contactOverlay.style.display = 'flex');
     document.getElementById('close-about').addEventListener('click', () => aboutOverlay.style.display = 'none');
     document.getElementById('close-contact').addEventListener('click', () => contactOverlay.style.display = 'none');
 
-    document.getElementById('contact-form').addEventListener('submit', e => {
-      e.preventDefault();
-      alert(currentLang === 'hu' ? "Köszönjük az üzenetet!" : "Thank you for your message!");
-      e.target.reset();
-      contactOverlay.style.display = 'none';
-    });
-
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('nav-menu');
-    hamburger.addEventListener('click', () => navMenu.classList.toggle('show'));
-
     // Nyelvváltó
     let currentLang = 'hu';
     const langSelect = document.getElementById('language-select');
-
     const texts = {
       hu: {
-        about: "Rólunk",
-        contact: "Kapcsolat",
-        generate: "🎲 Túra generálása",
+        about: "Rólunk", contact: "Kapcsolat", generate: "🎲 Túra generálása",
         aboutText: "<b>A RoadToLoad</b> Budapest legizgalmasabb helyeit köti össze egyetlen élménnyé.<br><br>Nem útvonalat adunk, hanem történeteket, amiket te írsz meg — egy kocsmától a másikig.<br><br>Töltsd újra a várost, fedezd fel a rejtett arcát, és indulj el a saját utadon.",
-        contactTitle: "Kapcsolatfelvétel",
-        name: "Név",
-        email: "E-mail cím",
-        msg: "Üzenet...",
-        send: "Küldés"
+        contactTitle: "Kapcsolatfelvétel", name: "Név", email: "E-mail cím", msg: "Üzenet...", send: "Küldés"
       },
       en: {
-        about: "About",
-        contact: "Contact",
-        generate: "🎲 Generate tour",
+        about: "About", contact: "Contact", generate: "🎲 Generate tour",
         aboutText: "<b>RoadToLoad</b> connects Budapest's most exciting places into one adventure.<br><br>We don’t just give you a route — we give you stories you’ll create, from one bar to the next.<br><br>Reload the city, discover its hidden face, and start your own journey.",
-        contactTitle: "Contact us",
-        name: "Name",
-        email: "E-mail address",
-        msg: "Message...",
-        send: "Send"
+        contactTitle: "Contact us", name: "Name", email: "E-mail address", msg: "Message...", send: "Send"
       }
     };
-
     langSelect.addEventListener('change', (e) => {
       currentLang = e.target.value;
       const t = texts[currentLang];
@@ -159,6 +132,42 @@
       document.getElementById('message').placeholder = t.msg;
       document.getElementById('send-btn').textContent = t.send;
     });
+
+    // Web3Forms küldés
+    const form = document.getElementById('contact-form');
+    const submitBtn = document.getElementById('send-btn');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      formData.append("access_key", "fefe9987-1d25-45f4-8f72-8d82ef6f152d");
+
+      const originalText = submitBtn.textContent;
+      submitBtn.textContent = currentLang === 'hu' ? "Küldés folyamatban..." : "Sending...";
+      submitBtn.disabled = true;
+
+      try {
+        const response = await fetch("https://api.web3forms.com/submit", {
+          method: "POST",
+          body: formData
+        });
+        const data = await response.json();
+
+        if (response.ok) {
+          alert(currentLang === 'hu' ? "Siker! Az üzenetet elküldtük." : "Success! Your message has been sent.");
+          form.reset();
+          contactOverlay.style.display = 'none';
+        } else {
+          alert("Error: " + data.message);
+        }
+      } catch (error) {
+        alert(currentLang === 'hu' ? "Hiba történt. Próbáld újra később." : "Something went wrong. Please try again.");
+      } finally {
+        submitBtn.textContent = originalText;
+        submitBtn.disabled = false;
+      }
+    });
   </script>
 </body>
 </html>
+
