--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>RoadToLoad – Térkép</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.counter.dev/script.js" data-id="76b74c5e-2f75-462f-b591-08d048624b98" data-utcoffset="1"></script>
   <link rel="stylesheet" href="style.css">
-
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
 
@@ -170,4 +170,5 @@
   </script>
 </body>
 </html>
+
 
