Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,57 @@
       { name: "Instant-Fogas", street: "Akácfa utca 49–51.", coords: [47.4984, 19.0610] },
       { name: "Kisüzem", street: "Kis Diófa utca 2.", coords: [47.4980, 19.0633] },
       { name: "Dzzs Bár", street: "Dohány utca 20.", coords: [47.4995, 19.0595] },
-      { name: "Ellátó Kert", street: "Kazinczy utca 48.", coords: [47.4992, 19.0641] }
+      { name: "Ellátó Kert", street: "Kazinczy utca 48.", coords: [47.4992, 19.0641] },
+      { name: "Trabant Presszó", street: "Budapest, Kerepesi út 104.", coords: [47.50431411432514, 19.142209458493806] },
+      { name: "Két Barát Pub és Darts Klub", street: "Budapest, Rákosfalva park", coords: [47.50700546667734, 19.145757390690022] },
+      { name: "Reining Söröző", street: "Budapest, Rákosfalva park 5.", coords: [47.5067096491249, 19.14542868449984] },
+      { name: "Sörkert Büfé", street: "Budapest, Kerepesi út 82-88.", coords: [47.50377006386992, 19.138195067329463] },
+      { name: "Zöld Kancsó", street: "Budapest, Örs vezér tere 1.", coords: [47.503811256504186, 19.13516780607615] },
+      { name: "Vezér Borozó-Söröző", street: "Budapest, Fehér út 3.", coords: [47.50090108462331, 19.136124337768518] },
+      { name: "Félidő Söröző", street: "Budapest, Kerepesi út 24.", coords: [47.50046584356149, 19.108750373846462] },
+      { name: "Stadion Söröző", street: "Budapest, Thököly út 42.", coords: [47.503934941377764, 19.088502122411175] },
+      { name: "Piros Hetes Presszó", street: "Budapest, Baross tér 15.", coords: [47.50057791815891, 19.081287881077348] },
+      { name: "Derby Büfé", street: "Budapest, Baross tér 6.", coords: [47.49944231353655, 19.081298417300548] },
+      { name: "Stifler 32 Bar", street: "Budapest, Rákóczi út 32.", coords: [47.49637813855068, 19.06717261293383] },
+      { name: "Sark", street: "Budapest, Wesselényi utca 25.", coords: [47.49812257497275, 19.064972445700594] },
+      { name: "Sark2", street: "Budapest, Wesselényi utca 21.", coords: [47.4980549491812, 19.064328967593877] },
+      { name: "Füge Udvar", street: "Budapest, Klauzál u. 19.", coords: [47.498364427800865, 19.0664885621075] },
+      { name: "Doboz Ruin Pub & Bar", street: "Budapest, Klauzál u. 10.", coords: [47.49799897927706, 19.06676042552224] },
+      { name: "4es6os Wesselényi", street: "Budapest, Erzsébet krt. 28.", coords: [47.50024874314327, 19.068671446071466] },
+      { name: "Gozsdu Udvar", street: "Budapest, Gozsdu Udvar", coords: [47.498504933178864, 19.05947636463971] },
+      { name: "Lámpás", street: "Budapest, Dob u. 15.", coords: [47.497638341939414, 19.060821402800286] },
+      { name: "Rácskert", street: "Budapest, Dob u. 40.", coords: [47.49961164035983, 19.062549476001468] },
+      { name: "Diófa Pinyó", street: "Budapest, Nagy Diófa u. 29.", coords: [47.49867902371778, 19.064025410705913] },
+      { name: "Instant-Fogas komplexum", street: "Budapest, Akácfa u. 51.", coords: [47.50053078701567, 19.065282175509363] },
+      { name: "SCORE! Sport Bar & Billiard", street: "Budapest, Dob u. 65.", coords: [47.50165996697666, 19.066968268184727] },
+      { name: "Kripta Söröző", street: "Budapest, Kertész u. 31.", coords: [47.50113841618521, 19.066339064774183] },
+      { name: "Rumpus Tiki Bar", street: "Budapest, Király u. 19.", coords: [47.4996301571262, 19.059516039409825] },
+      { name: "Fröccsterasz", street: "Budapest, Erzsébet tér 11-13.", coords: [47.49812932101141, 19.05358369904641] },
+      { name: "Akvárium Klub", street: "Budapest, Erzsébet tér 12.", coords: [47.49859622081475, 19.054163150133963] },
+      { name: "Ötkert Club", street: "Budapest, Zrínyi u. 4/A.", coords: [47.5004110277074, 19.04844520881007] },
+      { name: "Könyvtár Klub & Treffort Kert", street: "Budapest, Múzeum krt. 4.", coords: [47.494176087899675, 19.061978575057356] },
+      { name: "Bródy Italintézet", street: "Budapest, Bródy Sándor u. 2.", coords: [47.491999603293316, 19.06173211500117] },
+      { name: "Fecske Presszó", street: "Budapest, Baross u. 10.", coords: [47.4896880789013, 19.064139323481278] },
+      { name: "Főfotó", street: "Budapest, Baross u. 10.", coords: [47.48964452111458, 19.064123965922626] },
+      { name: "Andersen Pub", street: "Budapest, Krúdy u. 19.", coords: [47.49041557223433, 19.070046329466315] },
+      { name: "Krúdy Söröző", street: "Budapest, József krt. 47.", coords: [47.49040734125192, 19.07018648638851] },
+      { name: "Turbina Kulturális Központ", street: "Budapest, Vajdahunyad u. 4.", coords: [47.48893999374884, 19.073348795891004] },
+      { name: "A Grund", street: "Budapest, Nagy Templom utca 30.", coords: [47.4850662874461, 19.076201833461553] },
+      { name: "Grafika Söröző", street: "Budapest, Bakáts u. 1-3.", coords: [47.48249444429279, 19.06497841603372] },
+      { name: "A38 Hajó", street: "Budapest, Petőfi híd", coords: [47.476716506752346, 19.062783026524865] },
+      { name: "Scarabeus Music Café", street: "Budapest, Etele tér 6.", coords: [47.465829374224974, 19.02221181441473] },
+      { name: "Cafe Rio", street: "Budapest, Bartók Béla út 130.", coords: [47.470571661245685, 19.028782073475178] },
+      { name: "Pingvin Pub", street: "Budapest, Bocskai út 33.", coords: [47.47614013451706, 19.038791458673483] },
+      { name: "Rizmajer Sörház Móricz", street: "Budapest, Móricz Zsigmond körtér 4.", coords: [47.478056907334754, 19.046617700734114] },
+      { name: "Lakat S1 PUB", street: "Budapest, Siroki u. 1.", coords: [47.477061324809114, 19.048718200717822] },
+      { name: "Szpot", street: "Budapest, Bartók Béla út 11.", coords: [47.482053569182945, 19.052327069426813] },
+      { name: "MITZI – Kávé, Konyha, Bár", street: "Budapest, Bartók Béla út 1.", coords: [47.48300913061098, 19.052709330236876] },
+      { name: "Libella", street: "Budapest, Budafoki út 7.", coords: [47.482391600372516, 19.053727012854065] },
+      { name: "Dugattyús", street: "Budapest, Margit körút 15-17.", coords: [47.51353615518157, 19.034943044195156] },
+      { name: "Manyi – Kulturális Műhely", street: "Budapest, Margit körút 16.", coords: [47.51388752593867, 19.035526795118052] },
+      { name: "Ganz Söröző", street: "Budapest, Ganz u. 6.", coords: [47.5110054779781, 19.037447796903468] },
+      { name: "Cooltour Bar 3", street: "Budapest, Lövőház u. 18.", coords: [47.50976253819043, 19.02455209865654] },
+      { name: "Tetø", street: "Budapest, Lövőház u. 2.", coords: [47.50880578403261, 19.02694003850253] }
     ];
 
     const barListDiv = document.getElementById('bar-list');
@@ -170,6 +220,7 @@
   </script>
 </body>
 </html>
+
 
 
 
