--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
   <title>RoadToLoad – Térkép</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://cdn.counter.dev/script.js" data-id="76b74c5e-2f75-462f-b591-08d048624b98" data-utcoffset="1"></script>
 
 
 </head>
 
 <body>
-  <header>
+   <header>
     <h1>RoadToLoad</h1>
 
-    <div class="hamburger" id="hamburger">
-      <div></div><div></div><div></div>
-    </div>
-
-    <nav id="nav-menu">
-      <a id="about-link">Rólunk</a>
-      <a id="contact-link">Kapcsolat</a>
+    <!-- Nyelvválasztó -->
+    <div class="lang-switch">
       <select id="language-select">
         <option value="hu">HU</option>
         <option value="en">EN</option>
       </select>
+    </div>
+
+    <!-- Hamburger ikon -->
+    <div class="hamburger" id="hamburger">
+      <div></div><div></div><div></div>
+    </div>
+
+    <!-- Menü -->
+    <nav id="nav-menu">
+      <a id="about-link">Rólunk</a>
+      <a id="contact-link">Kapcsolat</a>
       <button id="generate" class="generate-btn">🎲 Túra generálása</button>
     </nav>
   </header>
@@ -60,7 +66,7 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // Térkép
+    // 🌍 Térkép
     const map = L.map('map').setView([47.4979, 19.0402], 13);
     L.tileLayer('https://basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', { maxZoom: 19 }).addTo(map);
 
@@ -121,9 +127,12 @@
       { name: "Ganz Söröző", street: "Budapest, Ganz u. 6.", coords: [47.5110054779781, 19.037447796903468] },
       { name: "Cooltour Bar 3", street: "Budapest, Lövőház u. 18.", coords: [47.50976253819043, 19.02455209865654] },
       { name: "Tetø", street: "Budapest, Lövőház u. 2.", coords: [47.50880578403261, 19.02694003850253] }
+
     ];
 
     const barListDiv = document.getElementById('bar-list');
+    let currentLang = 'hu';
+
     function generateTour() {
       map.eachLayer(layer => { if (layer instanceof L.Marker || layer instanceof L.Polyline) map.removeLayer(layer); });
       const shuffled = bars.sort(() => 0.5 - Math.random()).slice(0, 4);
@@ -138,36 +147,30 @@
       barListDiv.innerHTML = listHTML;
       barListDiv.style.display = "block";
     }
+
     document.getElementById('generate').addEventListener('click', generateTour);
     document.getElementById('mobile-generate').addEventListener('click', generateTour);
 
-    // Menü és overlay
+    // 🍔 Hamburger menü
     const hamburger = document.getElementById('hamburger');
     const navMenu = document.getElementById('nav-menu');
+    hamburger.addEventListener('click', () => navMenu.classList.toggle('show'));
+
+    // Overlay
     const aboutOverlay = document.getElementById('about-overlay');
     const contactOverlay = document.getElementById('contact-overlay');
-
-    hamburger.addEventListener('click', () => navMenu.classList.toggle('show'));
     document.getElementById('about-link').addEventListener('click', () => aboutOverlay.style.display = 'flex');
     document.getElementById('contact-link').addEventListener('click', () => contactOverlay.style.display = 'flex');
     document.getElementById('close-about').addEventListener('click', () => aboutOverlay.style.display = 'none');
     document.getElementById('close-contact').addEventListener('click', () => contactOverlay.style.display = 'none');
 
-    // Nyelvváltó
-    let currentLang = 'hu';
+    // 🌐 Nyelvváltó
     const langSelect = document.getElementById('language-select');
     const texts = {
-      hu: {
-        about: "Rólunk", contact: "Kapcsolat", generate: "🎲 Túra generálása",
-        aboutText: "<b>A RoadToLoad</b> Budapest legizgalmasabb helyeit köti össze egyetlen élménnyé.<br><br>Nem útvonalat adunk, hanem történeteket, amiket te írsz meg — egy kocsmától a másikig.<br><br>Töltsd újra a várost, fedezd fel a rejtett arcát, és indulj el a saját utadon.",
-        contactTitle: "Kapcsolatfelvétel", name: "Név", email: "E-mail cím", msg: "Üzenet...", send: "Küldés"
-      },
-      en: {
-        about: "About", contact: "Contact", generate: "🎲 Generate tour",
-        aboutText: "<b>RoadToLoad</b> connects Budapest's most exciting places into one adventure.<br><br>We don’t just give you a route — we give you stories you’ll create, from one bar to the next.<br><br>Reload the city, discover its hidden face, and start your own journey.",
-        contactTitle: "Contact us", name: "Name", email: "E-mail address", msg: "Message...", send: "Send"
-      }
+      hu: { about: "Rólunk", contact: "Kapcsolat", generate: "🎲 Túra generálása", aboutText: "<b>A RoadToLoad</b> Budapest legizgalmasabb helyeit köti össze egyetlen élménnyé.<br><br>Nem útvonalat adunk, hanem történeteket, amiket te írsz meg — egy kocsmától a másikig.<br><br>Töltsd újra a várost, fedezd fel a rejtett arcát, és indulj el a saját utadon.", contactTitle: "Kapcsolatfelvétel", name: "Név", email: "E-mail cím", msg: "Üzenet...", send: "Küldés" },
+      en: { about: "About", contact: "Contact", generate: "🎲 Generate tour", aboutText: "<b>RoadToLoad</b> connects Budapest's most exciting places into one adventure.<br><br>We don’t just give you a route — we give you stories you’ll create, from one bar to the next.<br><br>Reload the city, discover its hidden face, and start your own journey.", contactTitle: "Contact us", name: "Name", email: "E-mail address", msg: "Message...", send: "Send" }
     };
+
     langSelect.addEventListener('change', (e) => {
       currentLang = e.target.value;
       const t = texts[currentLang];
@@ -182,45 +185,6 @@
       document.getElementById('message').placeholder = t.msg;
       document.getElementById('send-btn').textContent = t.send;
     });
-
-    // Web3Forms küldés
-    const form = document.getElementById('contact-form');
-    const submitBtn = document.getElementById('send-btn');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const formData = new FormData(form);
-      formData.append("access_key", "fefe9987-1d25-45f4-8f72-8d82ef6f152d");
-
-      const originalText = submitBtn.textContent;
-      submitBtn.textContent = currentLang === 'hu' ? "Küldés folyamatban..." : "Sending...";
-      submitBtn.disabled = true;
-
-      try {
-        const response = await fetch("https://api.web3forms.com/submit", {
-          method: "POST",
-          body: formData
-        });
-        const data = await response.json();
-
-        if (response.ok) {
-          alert(currentLang === 'hu' ? "Siker! Az üzenetet elküldtük." : "Success! Your message has been sent.");
-          form.reset();
-          contactOverlay.style.display = 'none';
-        } else {
-          alert("Error: " + data.message);
-        }
-      } catch (error) {
-        alert(currentLang === 'hu' ? "Hiba történt. Próbáld újra később." : "Something went wrong. Please try again.");
-      } finally {
-        submitBtn.textContent = originalText;
-        submitBtn.disabled = false;
-      }
-    });
   </script>
 </body>
 </html>
-
-
-
-
